--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,15 +19,18 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0",
     "sqlite3": "^5.1.7"
   }
 }
