--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,8 +29,10 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "pdfkit": "^0.16.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "xlsx": "^0.18.5"
   }
 }
